Add verbose logging for ChromeDriver.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -52,6 +52,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomChromeDriver.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
